:recycle: refactor: 중복 코드 제거, Redis 적용